[package]
name = "hmac-serialiser-rs"
version = "0.1.0"
description = "HMAC Serialisers to cryptographically sign data like Python's ItsDangerous library but in rust."
authors = [
    "KJHJason <contact@kjhjason.com>",
]
keywords = ["hmac", "itsdangerous", "serialiser", "signing", "jwt"]
categories = ["cryptography", "authentication"]
repository = "https://github.com/KJHJason/hmac-serialiser-rs"
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8.5"
ring = "0.17.8"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
derive_more = "0.99.17"
